# cassini-deps

./: README.md  pyproject.toml
cassini_deps/: extension.py  import_tools.py
tests/: test_extension.py
